# data_pipeline_automation_V3

./: .gitignore  06_setup_analytics.sql  07_setup_video_assets.sql  Git Commands.txt  Launch Data Importer.bat  Modern_Analytics_Hub_Walkthrough.txt  README.md  Test Commands.txt  analytics.py  analytics_ui.py  auto_sync_watch.bat  auto_sync_watch_ALL.bat  create_dirs.py  debugging_guide.txt  fast_data_loader.py  fast_excel_parser.py  file_converter.py  get_credentials.py  ml_engine.py  requirements.txt  setup_demo_environment.py  simple_ui.py  utils.py
dagster_home/: workspace.yaml
elt_project/: __init__.py  dagster.yaml  pyproject.toml  workspace.yaml
elt_project/.tmp_dagster_home_0nwgjxgw/history/: runs.db
elt_project/.tmp_dagster_home_0nwgjxgw/schedules/: schedules.db
elt_project/.tmp_dagster_home_0v7zn52f/history/: runs.db
elt_project/.tmp_dagster_home_0v7zn52f/schedules/: schedules.db  schedules.db-wal
elt_project/.tmp_dagster_home_5_u4k2x9/history/: runs.db  runs.db-wal
elt_project/.tmp_dagster_home_5_u4k2x9/schedules/: schedules.db  schedules.db-journal
elt_project/.tmp_dagster_home_5omhwxyh/history/: runs.db
elt_project/.tmp_dagster_home_5omhwxyh/schedules/: schedules.db  schedules.db-shm  schedules.db-wal
elt_project/.tmp_dagster_home_ixeg26rb/history/: runs.db
elt_project/.tmp_dagster_home_ixeg26rb/schedules/: schedules.db
elt_project/backups/: backup_data_elt_pipeline_configs.sql  backup_data_etl_pipeline_run_logs.sql
elt_project/elt_project/: .gitignore  definitions.py  sensors.py
elt_project/utils/: test_scraper_config.py
(+432 files in other folders)
